deployments/kube_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kalavai
---
## Service deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-watcher-api
  namespace: kalavai
spec:
  replicas: 1 # ensure there is minimal downtime if node goes down
  selector:
    matchLabels:
      app: kube-watcher-api
  template:
    metadata:
      labels:
        app: kube-watcher-api
    spec:
      containers:
      - name: kube-watcher-api
        image: kalavai/kube_watcher:v1.0
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /v1/health
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 30
      serviceAccountName: api-service-account  # Service account with cluster permissions
---
apiVersion: v1
kind: Service
metadata:
  name: kube-watcher-service
  namespace: kalavai
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 31000
  selector:
    app: kube-watcher-api
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: tools-library-ingress
#   namespace: kalavai
#   annotations:
#     cert-manager.io/cluster-issuer: letsencrypt-prod
#     kubernetes.io/tls-acme: "true"
# spec:
#   ingressClassName: traefik
#   rules:
#     # Add a DNS record to match this URL to the IP of the cluster
#     - host: kubeapi.test.k8s.mvp.kalavai.net
#       http:
#         paths:
#           - pathType: Prefix
#             backend:
#               service:
#                 name: kube-watcher-service
#                 port:
#                   number: 8000
#             path: /
#   tls:
#   - hosts:
#     - kubeapi.test.k8s.mvp.kalavai.net
#     secretName: kubeapi.test.k8s.mvp.kalavai.net-tls
