deployments/flow_deployment_template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: $username
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: $username
  name: $deployment_name
spec:
  replicas: $replicas
  selector:
    matchLabels:
      app: $deployment_name
  template:
    metadata:
      labels:
        app: $deployment_name
    spec:
      restartPolicy: Always
      containers:
      - name: flow-deployer-container
        image: bundenth/flow_deployer:v3
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 30
        resources:
          limits:
            cpu: $num_cores
            memory: "$ram_memory"
          requests:
            cpu: $num_cores
            memory: "$ram_memory"
        volumeMounts:
        - mountPath: /etc/config
          name: json-configmap-volume
      volumes:
        - name: json-configmap-volume
          #
          configMap:
            name: json-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: $deployment_name-service
  namespace: $username
  labels:
    app: $deployment_name
spec:
  selector:
    app: $deployment_name
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $username-ingress
  namespace: $username
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: traefik
  rules:
    # Add a DNS record to match this URL to the IP of the cluster
    - host: $username.$deployment_name.test.k8s.mvp.kalavai.net
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: $deployment_name-service
                port:
                  number: 80
            path: /
  tls:
  - hosts:
    - $username.$deployment_name.test.k8s.mvp.kalavai.net
    secretName: $username.$deployment_name.test.k8s.mvp.kalavai.net-tls
